--- a/main.css
+++ b/main.css
@@ -1,3 +1,39 @@
 body {
   background: #778899;
+  font-family: helvetica;
+}
+
+.quiz-container {
+  background: #fff;
+  width: 70%;
+  border-radius: 30px;
+  padding: 30px;
+  margin: 0 auto;
+  border: 1px solid #546270;
+  box-shadow: 10px 15px 8px #546270;
+}
+
+.quiz-container h1 {
+  text-align: center;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+#quiz p#question {
+  font-size: 18px;
+}
+
+.buttons {
+  margin-top: 30px;
+}
+
+#b0, #b1, #b2, #b3 {
+  border-radius: 50px;
+  width: 200px;
+  font-size: 20px;
+  background: #546270;
+  margin: 10px 60px 10px 0;
+}
+
+#progress {
+  text-align: right;
 }
