--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ body {
 .quiz-container {
   background: #fff;
   width: 70%;
+  max-width: 600px;
   border-radius: 30px;
   padding: 30px;
   margin: 0 auto;
